monticore-generator/src/test/resources/cocos/invalid/A4062/A4062b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4062;

grammar A4062b {

  A = "-";

  split_token "-";

}
